# gh-projects

./: .gitignore  LICENSE.txt  README.md  index.html  index.md  manifest.json  markata.json  markata.toml  pyproject.toml  rss.xml  rss.xsl  sitemap.xml
.github/workflows/: release.yml
_logs/debug/: index.html
_logs/info/: index.html
_logs/warning/: index.html
archive/: index.html  rss.xml  sitemap.xml
gh_projects/: index.md
readme/: index.html
